# apiloomi

./: README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml
api/: urls.py  views.py
apiloomi/: asgi.py  backend.py  settings.py  urls.py  wsgi.py
cfehome/: settings.py
filmes/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
filmes/migrations/: 0001_initial.py  0002_genero_filme_atores_filme_comentarios_and_more.py  0003_remove_filme_avaliacao_alter_filme_estrelas.py  0004_ator_diretor_roteirista_alter_filme_atores_and_more.py  0005_status.py  0006_delete_status_remove_usuario_usuario_usuario_email_and_more.py  0007_filme_usuario_alter_filme_atores_and_more.py  0008_alter_filme_options_alter_filme_usuario_and_more.py  0009_usuario_can_create_filme_usuario_can_delete_filme_and_more.py  0010_usuario_uuid_alter_usuario_password.py  0011_remove_usuario_email_filme_uuid_usuario_username_and_more.py  0012_alter_usuario_password.py
